[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boosty"
description = "Asynchronous boosty wrapper with some utils"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["boosty", "wrapper", "asyncio"]
authors = [
  { name = "barsikus007" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies  = [
    "pydantic[email]~=1.10.6",
    "aiohttp~=3.8.4",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/barsikus007/boosty#readme"
Issues = "https://github.com/barsikus007/boosty/issues"
Source = "https://github.com/barsikus007/boosty"

[project.optional-dependencies]
dotenv = ["python-dotenv~=1.0.0"]
fast = ["orjson~=3.8.8", "aiohttp[speedups]~=3.8.4"]
all = ["boosty[dotenv,fast]"]


[tool.hatch.version]
path = "boosty/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=boobs --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
